carneAsadaStyle.css
body {
    background-color: rgb(230, 218, 218);
    align-items: center;
    justify-content: center;
    display: flex;
}

.container {
    border: 2px solid black;
    width: 60rem;
    border-radius: 1.2rem;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    display: grid;
}

h1 {
    justify-content: center;
    display: flex;
    text-align: center;
    border-bottom: 1px solid black;
    padding: 1rem;
    font-size: 3rem;
    padding-bottom: 2rem;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    text-transform: uppercase;
    letter-spacing: 2.3px;

}

.rowOne {
    padding-top: 1.5rem;
    display:inline-flex; 
}

#tacoPicOne {
    width: 22rem;
    float: right;
    border-radius: 1.2rem;
    border: .15em solid black;
    float: inline-end;
    margin-right: 3em;
    margin-bottom: 3em;
    margin-left: 3em;
}

.header2 {
    padding-left: 8rem;
    font-size: 1.9rem;
    text-decoration: underline;
    height: .6rem;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    text-transform: uppercase;
    letter-spacing: 2.3px;
}

#ingredientsList {
    padding-left: 5rem;
    font-size: 1.5rem;
    padding-bottom: 2rem;
    float: left;
    text-align: left;
   

    
}

#instructionsList {
    padding-left: 5rem;
    font-size: 1.5rem;
    padding-bottom: 3em;
}

#tacoPicTwo {
    width: 75%;
    height: 17rem;
    object-fit: cover;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    border: 2px solid black;
    border-radius: 1.2rem;

}

#homeButton {
    padding: .4rem;
    width: 4.5rem;
    border-radius: .2rem;
    margin-left: 1.2rem;
    margin-bottom: 1rem;
    cursor: pointer;
    transition: .5s;
    margin-top: 2rem;

}


#homeButton:hover {
    background-color: rgb(180, 55, 55);
    color: white;
}

a {
    text-align: center;
    justify-content: center;
}

li {
    padding: .3rem;
}

